simplify font styles, attempt to prevent font flickering

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,13 +44,17 @@ img {
   max-width: 100%;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: #dcffba;
   font-weight: normal;
   line-height: 1;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: 3rem;
   margin-bottom: 0;
 }
@@ -59,7 +63,8 @@ h1, h2 {
  * 1. Small hack to allow highlighting headings without having to use a <span>.
  */
 
-h3, h4 {
+h3,
+h4 {
   display: inline-block; /* 1 */
   margin-top: 0;
   margin-bottom: 1rem;
@@ -69,15 +74,15 @@ h3, h4 {
 
 h3 {
   font-size: 2rem;
-  color: #0C071E;
-  background-color:#dcffba;
+  color: #0c071e;
+  background-color: #dcffba;
 }
 
 h4 {
   display: table;
   font-size: 1.5rem;
-  color: #0C071E;
-  background-color:#dcffba;
+  color: #0c071e;
+  background-color: #dcffba;
 }
 
 p {
@@ -89,7 +94,9 @@ strong {
   color: #dcffba;
 }
 
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -113,7 +120,7 @@ table {
 
 td,
 th {
-  padding: .25rem .5rem;
+  padding: 0.25rem 0.5rem;
   border: 1px solid #fff;
 }
 
@@ -125,7 +132,7 @@ th {
 
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: rgba(0, 0, 0, .25);
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 /**
@@ -133,7 +140,7 @@ tbody tr:nth-child(odd) th {
  */
 
 code {
-  padding: .25em .5em;
+  padding: 0.25em 0.5em;
   font-size: 85%;
   background-color: #000;
   border-radius: 3px;
@@ -169,7 +176,7 @@ pre code {
  */
 
 .content {
-  font-family: 'pxplus_ibm_vga8regular', monospace;
+  font-family: 'pxplus_ibm_vga8regular', monospace, monospace;
 }
 
 footer {
